syntax = "proto3";

import "transaction.proto";

package types;

message Genesis {
	bool isrun = 1;
}

//message for execs.coins
message CoinsAction {
	oneof value {
		CoinsTransfer transfer = 1;
		CoinsWithdraw withdraw = 4;
		CoinsGenesis genesis = 2;
	}
	int32 ty = 3;
}

//给某个地址凭空打币
//只能执行一次，不能执行第二次
message CoinsGenesis {
	int64 amount = 2;
	string returnAddress = 3;
}

message CoinsTransfer {
	int64 amount = 2;
	string note = 3;
}

message CoinsWithdraw {
	int64 amount = 2;
	string note = 3;
}

message Hashlock {
	bytes hashlockId = 1;
	int32 status = 2;
	int64 CreateTime = 3;
	string toAddress = 4;
	string returnAddress = 5;
	int64 amount = 6;
	int64 frozentime = 7;
}

//message for hashlock
message HashlockAction {
	oneof value {
		HashlockLock hlock = 1;
		HashlockSend hsend = 2;
		HashlockUnlock hunlock = 3;
	}
	int32 ty = 4;
}

message HashlockLock {
	int64 amount = 1;
	int64 time = 2;
	bytes hash = 3;
	string toAddress = 4;
	string returnAddress = 5;
}

message HashlockUnlock {
	bytes secret = 1;
	//bytes  hash     = 3;
}

message HashlockSend {
	bytes secret = 1;
	//bytes  hash     = 3;
}

message Ticket {
	string ticketId = 1;
	int32 status = 2; //0 -> 未成熟 1 -> 可挖矿 2 -> 已挖成功 3-> 已关闭
	bool isGenesis = 3; //genesis 创建的私钥比较特殊
	int64 createTime = 4; //创建时间
	int64 minerTime = 5; //挖矿时间
	int64 minerValue = 8; //挖到的币的数目
	string minerAddress = 6;
	string returnAddress = 7; //return wallet
}

//message for execs.ticket
message TicketAction {
	oneof value {
		TicketBind tbind = 5;
		TicketOpen topen = 1;
		TicketGenesis genesis = 2;
		TicketClose tclose = 3;
		TicketMiner miner = 4;
	}
	int32 ty = 10;
}

message TicketMiner {
	uint32 bits = 1;
	int64 reward = 2;
	string ticketId = 3;
	bytes modify = 4;
}

message TicketBind {
	string minerAddress = 1;
	string returnAddress = 2;
}

message TicketOpen {
	string minerAddress = 1; //用户挖矿的ticket 地址
	int32 count = 2; //购买ticket的数目
	string returnAddress = 3; //币实际存储的地址
}

message TicketGenesis {
	string minerAddress = 1;
	string returnAddress = 2;
	int32 count = 3;
}

message TicketClose {
	repeated string ticketId = 1;
}

message TicketList {
	string addr = 1;
	int32 status = 3;
}

message TicketInfos {
	repeated string ticketIds = 1;
}

message ReplyTicketList {
	repeated Ticket tickets = 1;
}

message ReplyWalletTickets {
	repeated Ticket tickets = 1;
	repeated bytes privkeys = 2;
}

message ReceiptTicket {
	string ticketId = 1;
	int32 status = 2;
	int32 prevStatus = 3;
	string addr = 4;
}

message ReceiptTicketBind {
	string oldMinerAddress = 1;
	string newMinerAddress = 2;
	string returnAddress = 3;
}

message ExecTxList {
	bytes stateHash = 1;
	repeated Transaction txs = 2;
	int64 blockTime = 3;
	int64 height = 4;
}

message Query {
	bytes execer = 1;
	string funcName = 2;
	bytes payload = 3;
}
